	* The game contacts updates.zombono.com for an internet connection check. This is done after config.cfg is run, so you can put "ns_nointernetcheck 1" in your 	config.cfg or default.cfg to not run the check, if you don't like this for whatever reason. If you want to completely cut off all connections to zombono.com, put 	"ns_disabled 1" in your config.cfg or default.cfg files.

Version 0.0.5
March 23, 2024
* Made the engine and gamex64 compile on GCC and run on Linux. Still working on the renderer...
* Changed game files directory from "zombono" to "zombonogame" as some(?) linux filesystems can't have a folder named the same name as a file (zombono binary vs zombono folder)
* Removed qboolean and made the engine use stdbool.
* Moved from ericw-tools to a custom fork of q2tools-220, "zbsp" (Zombono BSP Compiler) for compiling maps.
	* This appears to be faster, but means lighting will need to be changed around as the new BSP compiler compiles maps slower
* Changed the map format from standard Quake 2 BSP38 to a modified Qbism BSP called "ZBSP"
	* ZBSPv1 changes on top of QBISM (see ZBSPv1.txt for full list of changes):
		* Magic: QBSP -> ZBSP
		* Changed texture length limit from 32 to 80
		* Changed pak filesize limit from 56 to 256
		* Removed LUMP_POP as it was 1 byte and useless (and a quake 1 left over)
	* Converted all maps to the new format
		* Blockout only ones don't have lighting
* Began a general reorganisation of the source code that will continue throughout the next several releases
* Split primary and secondary attack animations
* Split lights into pointlights (light) and spotlights (light_spot). Spotlights are a bit fucked
	* All light now has a direction!
	* Far better lighting in all levels with it
* Split key and mouse events in the UI system into key down and key up and mouse down and mouse up events respectively. 
	* Fixed mouse events (as they are internally implemented as keys) getting sent to key and mouse event functions