@@ -1571,7 +1571,7 @@ void CL_WriteConfiguration (void)
 		return;
 	}
 
-	fprintf (f, "// generated by quake, do not modify\n");
+	fprintf (f, "// generated by zombono, do not modify\n");
 	Key_WriteBindings (f);
 	fclose (f);
 
