@@ -1,4 +1,4 @@
-// generated by quake, do not modify
+// generated by zombono, do not modify
 // todo: MERGE 
 bind TAB "leaderboard"
 bind ENTER "invuse"
