@@ -9,6 +9,8 @@ April XX, 2024
 * Began working on the game's various attached network services.
 	* Curl is now integrated into the engine. On Windows, this appears to require horrifying hacks.
 	* The game contacts updates.zombono.com for an internet connection check. This is done after config.cfg is run, so you can put "ns_nointernetcheck 1" in your 	config.cfg or default.cfg to not run the check, if you don't like this for whatever reason. If you want to completely cut off all connections to zombono.com, put 	"ns_disabled 1" in your config.cfg or default.cfg files.
+* The game now has an auto-incrementing build number that increments by one each time the game is compiled.
+	* This is for the updater so that updates can be reissued without changing the game's version number.
 
 Version 0.0.5
 March 23, 2024
